--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
-  "name": "synapse-space",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "synapse-space",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"dev:g": "pnpm generate:route & next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome check .",
+		"lint:fix": "biome check . --write",
+		"db:push": "drizzle-kit push",
+		"db:studio": "drizzle-kit studio",
+		"generate:route": "node ./src/scripts/generate-index.js"
+	},
+	"dependencies": {
+		"@ark-ui/react": "^5.18.1",
+		"@neondatabase/serverless": "^1.0.1",
+		"@radix-ui/react-icons": "^1.3.2",
+		"@t3-oss/env-nextjs": "^0.12.0",
+		"@tanstack/react-query": "^5.83.0",
+		"@tanstack/react-query-devtools": "^5.83.0",
+		"@types/pg": "^8.15.4",
+		"@xyflow/react": "^12.8.2",
+		"better-auth": "^1.2.10",
+		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.41.0",
+		"glslify-loader": "^2.0.0",
+		"motion": "^12.5.0",
+		"next": "15.4.4",
+		"openai": "^5.10.1",
+		"pg": "^8.16.3",
+		"raw-loader": "^4.0.2",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"server-only": "^0.0.1",
+		"tailwind-merge": "^2.5.5",
+		"tailwind-variants": "^0.3.0",
+		"zod": "^4.0.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.2",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.30.5",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	},
+	"volta": {
+		"node": "24.4.1"
+	}
 }
